// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en gif grid Debe mostrar items cuando se cargan imágenes con useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    One Punch
     
  </h3>
   
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="MY title"
      url="https://lochalhost/cualquiera.jpg"
    />
  </div>
</Fragment>
`;

exports[`pruebas en gif grid tomatchsnapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    One Punch
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
   
  <div
    className="card-grid"
  />
</Fragment>
`;
